--- a/install.html
+++ b/install.html
@@ -35,54 +35,48 @@
 
         <section id="main_content">
         
-<h1 id="installation-instructions-for-ragout">Installation Instructions for Ragout</h1>
-<h2 id="availability">Availability</h2>
+<h1><a id="Installation_Instructions_for_Ragout_0"></a>Installation Instructions for Ragout</h1>
+<h2><a id="Availability_3"></a>Availability</h2>
 <p>Ragout was tested under Mac OS and Linux. While it should work
 under Windows, we currently do not provide an official support.</p>
-<h2 id="build-requirements">Build Requirements</h2>
+<h2><a id="Build_Requirements_9"></a>Build Requirements</h2>
 <ul>
 <li>C++ compiler with C++0x support (GCC 4.6+ / Clang 3.2+ / Apple Clang 4.2+)</li>
 <li>GNU make / Cmake (for building Sibelia)</li>
 </ul>
-<h2 id="runtime-depenencies">Runtime Depenencies</h2>
+<h2><a id="Runtime_Depenencies_15"></a>Runtime Depenencies</h2>
 <ul>
 <li>Python 2.7</li>
 <li>Sibelia [<a href="http://github.com/bioinf/Sibelia">http://github.com/bioinf/Sibelia</a>] or HAL Tools [<a href="https://github.com/glennhickey/hal">https://github.com/glennhickey/hal</a>]</li>
 </ul>
-<h2 id="binary-distribution">Binary Distribution</h2>
-<p>While we recommend to build Ragout from source on each machine, you also can
-use pre-compiled binaries which are available for Linux and Mac OS from 
-Releases page on Github: <a href="https://github.com/fenderglass/Ragout/releases">https://github.com/fenderglass/Ragout/releases</a></p>
-<p>In this case, you do not need any installation procedures. If you are unsure,
-which version (binary or source) you have downloaded, you can check for
-binary files in &quot;lib&quot; directory. If they exist - you have obtained a binary
-version, otherwise it is source.</p>
-<h2 id="building">Building</h2>
-<ol>
-<li>To build Ragout native modules, type:
+<h2><a id="Binary_Distribution_22"></a>Binary Distribution</h2>
+<p>Pre-compiled binaries are available for Linux and Mac OS from
+Releases page: <a href="https://github.com/fenderglass/Ragout/releases">https://github.com/fenderglass/Ragout/releases</a>
+In this case you will not need any installation procedures.</p>
+<h2><a id="Building_30"></a>Building</h2>
+<p>To build Ragout native modules, type:</p>
 <pre><code> make
-</code></pre></li>
-<li>To build and install Sibelia, use:
+</code></pre>
+<p>To build and install Sibelia, use:</p>
 <pre><code> python scripts/install-sibelia.py
-</code></pre></li>
-</ol>
-<p>If you already have Sibelia installed or do not need it, 
+</code></pre>
+<p>If you already have Sibelia installed or do not need it,
 you can skip the second step.</p>
-<h2 id="hal-tools">HAL Tools</h2>
+<h2><a id="HAL_Tools_45"></a>HAL Tools</h2>
 <p>HAL alignment could be used for synteny blocks decomposition instead of Sibelia
 (recommended for large genomes). If you want to use HAL alignment as input,
 you need to install HAL Tools package: <a href="https://github.com/glennhickey/hal">https://github.com/glennhickey/hal</a>.
 Follow the manuals and do not forget to properly set PATH and PYTHONPATH
-environment variables as it is described in them.</p>
-<h2 id="troubleshooting">Troubleshooting</h2>
-<p>Q: Different errors during compilation, possibly with 
-&quot;unrecognized command line option &#39;-std=c++0x&#39;&quot; message:</p>
-<p>A: Probably your compiler is too old and does not support C++0x. Minimum
-versions of GCC and Clang are mentioned at the beginnig of this documtent.</p>
-<p>Q: &quot;libstdc++.so.6: version `CXXABI_1.3.5&#39; not found&quot; or similar error when running</p>
-<p>A: Ensure, that version of libc++ which was used to compile Ragout is similar
-to one which is used to run it. You can specify an extra search path
-to a specific library by setting &quot;LD_LIBRARY_PATH&quot; variable.</p>
+environment variables as it is described.</p>
+<h2><a id="Troubleshooting_55"></a>Troubleshooting</h2>
+<p>Q: Multiple compilation errors, possibly with
+“unrecognized command line option ‘-std=c++0x’” message:</p>
+<p>A: Probably your compiler is too old and does not support C++0x. Minimum reqired
+versions of GCC and Clang are given in the beginnig of this documtent.</p>
+<p>Q: “libstdc++.so.6: version `CXXABI_1.3.5’ not found” or similar error when running</p>
+<p>A: Ensure that the version of libc++ that was used to compile Ragout is similar
+to one the you currently using. You can specify an extra search path
+to a specific library by setting “LD_LIBRARY_PATH” variable.</p>
 
         </section>
 
