--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
           <h1>Ragout</h1>
-          <h2>A tool for assisted assembly using multiple references</h2>
+          <h2>Chromosome assembly using multiple references</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -37,23 +37,19 @@
 
         <p><center><img src="images/ragout.png"/></center></p>
 
-<p>Version: 2.0b</p>
+<p>Version: 2.0</p>
 
 <h2><a id="Description_23"></a>Description</h2>
 <p>Ragout (Reference-Assisted Genome Ordering UTility)
-is a tool for reference-assisted assembly. Given a set of initial sequences
-(contigs/scaffolds) and multiple references (complete or draft) as input
-it produces a chromosome-scaled assembly (as a set of gapped scaffolds).</p>
-<p>The approach is based on the analysis of medium- and large-scale rearrangements
+is a tool for chromosome assembly using multiple references. Given a set of assembly fragments
+(contigs/scaffolds) and one or multiple related references (complete or draft),
+it produces a chromosome-scale assembly (as a set of scaffolds).</p>
+<p>The approach is based on the analysis of genome rearrangements
 (like inversions or chromosomal translocations) between the input genomes
-using breakpoint graph.</p>
-<p>The first version of Ragout was limited to bacterial genomes only,
-but currently there is an experimental support of mammalian-scaled genomes as well.</p>
-<h2><a id="RECOMB"></a>RECOMB 2016</h2>
+and reconstructing the most parsimonious structure of the target genome.</p>
+<p>Ragout now supports both small and large genomes (of mammalian scale and complexity).
+The assembly of highly polymorphic genomes is currently limited.</p>
 
-
-<p>Supplementary materials for RECOMB 2016 submission could be found at  
-<em><a href="https://drive.google.com/file/d/0B1pUguR1yn7TNklYUnpxZVdnSFk/view?usp=sharing">this link</a></em>.</p>
 
 <h2><a id="Install_38"></a>Install</h2>
 
@@ -73,10 +69,11 @@ but currently there is an experimental support of mammalian-scaled genomes as we
 <li>Dmitriy Meleshko (St. Petersburg University of the Russian Academy of Sciences)</li>
 <li>Son Pham (UCSD)</li>
 </ul>
-<h2><a id="Citation_55"></a>Citation</h2>
+<h2><a id="Citation_55"></a>Publications</h2>
 <ul>
-<li>Mikhail Kolmogorov, Brian Raney, Benedict Paten, and Son Pham.
-“Ragout: A reference-assisted assembly tool for bacterial genomes”,
+<li>Kolmogorov et al., "Chromosome assembly of large and complex genomes using multiple references",
+bioRxiv preprint, 2016</li>
+<li>Kolmogorov et al., "Ragout: A reference-assisted assembly tool for bacterial genomes",
 Bioinformatics, 2014</li>
 </ul>
 <h2><a id="Contacts_62"></a>Contacts</h2>
