--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Also, you can send your feedback to <a href="mailto:fenderglass@gmail.com">fende
 <li>Aleksey Gurevich (testing)</li>
 </ul>
 <h2><a id="Thirdparty_78"></a>Third-party</h2>
-<p>Ragout package includes some third-patry software (see <a href="http://INSTALL.md">INSTALL.md</a> for details)</p>
+<p>Ragout package includes some third-patry software (see INSTALL.md for details)</p>
 <ul>
 <li>Networkx Python library [<a href="http://networkx.github.io/">http://networkx.github.io/</a>]</li>
 <li>Newick Python parser [<a href="http://www.daimi.au.dk/~mailund/newick.html">http://www.daimi.au.dk/~mailund/newick.html</a>]</li>
